--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>JS Array Methods</title>
   </head>
   <body>
-    <h1>JS Array Methodds</h1>
-    
+    <h1>JS Array Methods</h1>
+
     <script src="app.js" type="module"></script>
   </body>
 </html>
